--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/logo.jpg" type="image/jpeg">
-  <title>BuyerCompass</title>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2563717696637573"
-     crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="/logo.jpg" type="image/jpeg" />
 
+  <title>BuyerCompass</title>
+
+  <!-- Google AdSense -->
+  <script
+    async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2563717696637573"
+    crossorigin="anonymous">
+  </script>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="src/main.jsx"></script>
 </body>
-
 </html>
