--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
+  <!-- Monetag Verification -->
+  <meta name="monetag" content="d58c0d0fb51784f2d0ffc28903b75ac6">
+
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/logo.jpg" type="image/jpeg" />
