--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 
 <body>
   <div id="root"></div>
+
+  <!-- Monetag Ad Script -->
+  <script src="https://quge5.com/88/tag.min.js"
+          data-zone="194824"
+          async
+          data-cfasync="false"></script>
+
   <script type="module" src="src/main.jsx"></script>
 </body>
 </html>
